--- a/index.html
+++ b/index.html
@@ -1,55 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hamza Hassen - Front-End Developer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              background: '#0f172a', // Slate 900
-              surface: '#1e293b', // Slate 800
-              primary: '#38bdf8', // Sky 400
-              secondary: '#94a3b8', // Slate 400
-            },
-            fontFamily: {
-              sans: ['system-ui', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'sans-serif'],
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      /* Custom scrollbar for better aesthetics */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #0f172a;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #334155;
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #475569;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
-  }
-}
-</script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hamza Hassen | Front-End Developer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-  <body class="bg-background text-slate-200 font-sans antialiased selection:bg-primary selection:text-background">
-    <div id="root"></div>
-  </body>
+<body>
+
+  <header class="hero">
+    <h1>Hamza Hassen</h1>
+    <p>Front-End Developer</p>
+  </header>
+
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      5th year Computer Science student at Addis Ababa University.
+      Passionate about building modern, responsive web interfaces.
+    </p>
+  </section>
+
+  <section class="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>House Rental System (Admin Dashboard)</li>
+      <li>Election System (Admin Dashboard)</li>
+      <li>Frontend Practice Projects</li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: hamuzehassen@gmail.com</p>
+    <p>Phone: +251965417537</p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
 </html>
